--- a/Band of Blades Official/translations/fr.json
+++ b/Band of Blades Official/translations/fr.json
@@ -235,7 +235,7 @@
   "divine_ability_horned_god’s_thews_desc": "Legionnaires can spend special armor to resist physical consequences, or to push themselves on any prowess action.",
   "divine_ability_living_god’s_fury": "Furie du Dieu Vivant",
   "divine_ability_living_god’s_fury_desc": "The Quartermaster may spend Religious Supply before an assault mission to add +1d on the engagement roll. Legionnaires equip both Reliquaries and Black Shot.",
-  "divine_ability_living_god’s_kiss": "Living God’s Kiss",
+  "divine_ability_living_god’s_kiss": "Baiser du Dieu Vivant",
   "divine_ability_living_god’s_kiss_desc": "During a rest and recuperation campaign action, each Legionnaire removes 2 corruption in addition to healing.",
   "divine_ability_living_god’s_vigor": "Vigueur du Dieu Vivant",
   "divine_ability_living_god’s_vigor_desc": "Specialists can take an extra level 2 harm (3 total).",
@@ -245,11 +245,11 @@
   "divine_ability_modern_warfare_desc": "Les Troupes des Putrides portent des armures et armes appropriées.",
   "divine_ability_nature’s_fury": "Furie de la Nature",
   "divine_ability_nature’s_fury_desc": "Les Broyeurs et Sorcières peuvent maudire la nature, couvrant les troupes de brouillards et de tempêtes, animant les arbres durant les combats.",
-  "divine_ability_pillar_of_skulls": "Pillar of Skulls",
+  "divine_ability_pillar_of_skulls": "Pilier de crânes",
   "divine_ability_pillar_of_skulls_desc": "Les Broyeurs font un pilier de corps gémissant pour invoquer et corrompre des Bêtes sacrées. Les Dévoreurs peuvent apparaitre durant n'importe quelle mission.",
   "divine_ability_sacred_seals": "Sceaux sacrés",
   "divine_ability_sacred_seals_desc": "All Legionnaires gain special armor versus magical effects.",
-  "divine_ability_scars_of_war": "Scars of War",
+  "divine_ability_scars_of_war": "Cicatrices de la guerre",
   "divine_ability_scars_of_war_desc": "Les Troupes des Putrides peuvent corrompre le sol. Des brouillards de poisons apparaissent et détruisent la nature. Bien qu'étant parfois absent, cela peut apparaitre rapidement comme la conséquence d'un jet.",
   "divine_ability_shapeshifter": "Change-forme",
   "divine_ability_shapeshifter_desc": "Gain 1 intel after completing 2 primary missions.",
@@ -265,7 +265,7 @@
   "divine_ability_the_changing_curse_desc": "Les Sorcières des Ombres corrompent les vivants. Les Transformés peuvent apparaitre durant n'importe quelle mission.",
   "divine_ability_the_coven": "The Coven",
   "divine_ability_the_coven_desc": "Les Broyeurs lient des âmes maudites à des corps encore vivant pour créer des acolytes. Les Sorcières des Ombres peuvent apparaitre durant n'importe quelle mission.",
-  "divine_ability_the_forge": "The Forge",
+  "divine_ability_the_forge": "La Forge",
   "divine_ability_the_forge_desc": "Render forges blades of the fallen and cinderblood into Elites. Thorns can appear in any mission.",
   "divine_ability_the_sworn": "The Sworn",
   "divine_ability_the_sworn_desc": "Some oaths transcend death. Knights of the Black Oak can appear in any mission.",
