--- a/D&D_3-5/translations/fr.json
+++ b/D&D_3-5/translations/fr.json
@@ -166,7 +166,7 @@
 	"touch-armor-class-a": "CA Contact",
 	"flat-footed-armor-class-i": "CA PaD",
 	"immobilized-armor-class-i": "CA immobilisé",
-	"ability-armor-class-info": "Typically: part of AC and Touch AC. Penalty is part of FF AC and Immobilized AC, bonus is not. Capped by Armor and Load.",
+	"ability-armor-class-info": "Typiquement : partie de la CA et CA Contact. La pénalité fait partie de la CA PaD et CA immobilisé, le bonus non. Limité par l'armure et la charge.",
 	"name": "Nom",
 	"armor-class-bonus-i": "Bonus de CA",
 	"capped?": "Maxé?",
@@ -175,24 +175,24 @@
 	"in-flat-footed-armor-class?-i": "Dans la CA PaD ?",
 	"source/notes": "Source/Notes",
 	"dexterity-bonus-a": "Bonus de DEX",
-	"dexterity-armor-class-modification-info": "Limited by Armor and Load; In AC and Touch AC; *Not in FF AC(except for penalty).",
-	"armor-class-info": " Component of AC and FF AC; Not component of Touch AC ",
+	"dexterity-armor-class-modification-info": "Limité par l'Armure et la Charge; Dans la CA et la CA contact; *Pas dans la CA PaD (sauf pour la pénalité).",
+	"armor-class-info": " Partie de CA et CA PaD ; Pas de la CA Contact ",
 	"from-armor-above": "De l’armure, ci-dessus. ",
 	"from-shield-above": "Du bouclier, ci-dessus. ",
 	"natural-armor": "Armure naturelle",
-	"natural-armor-class-info": " Component of AC and FF AC; Not component of Touch AC ",
+	"natural-armor-class-info": " Partie de CA et CA PaD ; Pas de la CA Contact ",
 	"current-natural-armor-bonus": "Bonus d’armure naturelle actuel",
-	"dodge-armor-class-info": " Component of AC and Touch AC; Not a component of FF AC. ",
+	"dodge-armor-class-info": " Partie de CA et CA PaD ; Pas de la CA Contact. ",
 	"current-dodge-bonus": "Bonus actuel d'Esquive",
 	"deflection-armor-class-info": " Partie de CA, CA Contact et CA PaD. ",
 	"current-deflection-bonus": "Bonus de déflexion actuel",
 	"miscellaneous-armor-class-i": "CA Divers",
-	"miscellaneous-armor-class-info": " Potential component of AC, Touch AC, FF or Immobilized AC. ",
+	"miscellaneous-armor-class-info": " Partie potentielle de CA, CA Contact, CA PaD ou CA immobilisé. ",
 	"in-armor-class?-i": "Dans la CA?",
-	"in-immobilized-armor-class?-i": "In Immobl AC?",
-	"current-miscellaneous-armor-class-bonus": "Current Misc AC Bonus",
-	"encumbrance/load": "Encumbrance/Load",
-	"encumbrance-and-load": "Encumbrance and Load",
+	"in-immobilized-armor-class?-i": "Dans la CA immobilisé ?",
+	"current-miscellaneous-armor-class-bonus": "Bonus divers à la CA actuels",
+	"encumbrance/load": "Encombrement/Charge",
+	"encumbrance-and-load": "Encombrement et Charge",
 	"light-load": " Charge Légère ",
 	"medium-load": " Charge moyenne ",
 	"heavy-load": " Charge Lourde ",
@@ -221,11 +221,11 @@
 	"single-use-items": "Objets à usage unique",
 	"quantity-a": "Qté",
 	"cost(gp)": "Coût (PO)",
-	"total-cost(gp)-i": "T_Cost (gp)",
-	"weight-a": "Wt (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
-	"total-weight-a": "T_Wt (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
+	"total-cost(gp)-i": "T_Cost (po)",
+	"weight-a": "Pds (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
+	"total-weight-a": "T_pds (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
 	"hitpoints-i": "PVs",
-	"hardness-a": "Hard",
+	"hardness-a": "Dur",
 	"location": "Localisation",
 	"total-cost": "Coût total",
 	"gold-pieces-i": "po",
@@ -297,7 +297,7 @@
 	"use-rope": "Utiliser une corde",
 	"other-skills": "Autres compétences",
 	"skill-name": "Nom de la Compétence",
-	"ability-stat-s": "Ability<br>Stat",
+	"ability-stat-s": "Caractéristique<br>Stat",
 	"trained-only": "Entraîné seulement",
 	"caster-level": "Niveau de Lanceur de Sorts",
 	"spells-per-day": "Sorts/Jour",
@@ -334,7 +334,7 @@
 	"note-etc": "Notes...",
 	"ability-recalc-info": "Recalcul du score de caractéristique. Cochez cette case pour forcer un recalcul des scores de caractéristiques.",
 	"weight-setup-info1": " Choix de l'unité de poids pour les calculs de poids",
-	"weight-setup-info2": " Unit should be an abbreviation of 2 or 3 characters.",
+	"weight-setup-info2": " L'unité devrait être une abréviation de 2 ou 3 caractères.",
 	"scaling-factor": " Facteur d’échelle ",
 	"unit": " Unité ",
 	"pound": " livre ",
