--- a/Forbidden_Lands/translations/ru.json
+++ b/Forbidden_Lands/translations/ru.json
@@ -1,35 +1,35 @@
 {
-	"adult-2": "Adult +1",
-	"age": "Age",
-	"agility": "Agility",
+	"adult-2": "Взрослый +1",
+	"age": "Возраст",
+	"agility": "Проворство",
 	"agility-abbr": " [agl]",
-	"agility-abbr-u": "AGI",
-	"animal-handling": "Animal Handling",
+	"agility-abbr-u": "ПРВ",
+	"animal-handling": "Уход за животными",
 	"api-dice": "api dice",
-	"api-dice-title": "Use API Dice Roller. (API is a Pro feature) 'Forbidden Lands Year-Zero Die Roller' script must be installed.",
-	"appearance-u": "APPEARANCE",
-	"armor": "Armor",
-	"armor-roll": "Armor Roll",
-	"armor-helmet": "ARMOR/HELMET",
-	"armor-rating-abbr": "AR",
+	"api-dice-title": "Использовать API Бросков кубиков (API доступен в Pro подписке). Должен быть установлен скрипт 'Forbidden Lands Year-Zero Die Roller'.",
+	"appearance-u": "ВНЕШНОСТЬ",
+	"armor": "Доспех",
+	"armor-roll": "Проверка доспеха",
+	"armor-helmet": "ДОСПЕХ/ШЛЕМ",
+	"armor-rating-abbr": "РД",
 	"arms-length-abbr": "Arm's L.",
-	"arrows": "Arrows",
-	"artifact": "Artifact",
-	"artifact-bonus": "Artifact Bonus",
-	"attr-abbr": "Attr",
-	"attribute-score": "Attribute Score",
-	"attribute-u": "ATTRIBUTES",
-	"base": "Base",
-	"base-dice": "Base Dice",
-	"base-attr-abbr": "Base/Attr",
-	"base-attribute-dice": "Base/Attribute Dice",
-	"body": "Body",
-	"bonus": "Bonus",
-	"bread": "Bread",
-	"carried": "Carried",
-	"carried-abbr": "Carr",
+	"arrows": "Стрелы",
+	"artifact": "Артефакт",
+	"artifact-bonus": "Бонус артефакта",
+	"attr-abbr": "Хар.",
+	"attribute-score": "Значение характеристики",
+	"attribute-u": "ХАРАКТЕРИСТИКИ",
+	"base": "Базовое",
+	"base-dice": "Базовый кубик",
+	"base-attr-abbr": "Баз./Хар.",
+	"base-attribute-dice": "Баз./Кубик характеристики",
+	"body": "Тело",
+	"bonus": "Бонус",
+	"bread": "Хлеб",
+	"carried": "На себе",
+	"carried-abbr": "На себе",
 	"carry": "Carry",
-	"character": "Character",
+	"character": "Персонаж",
 	"clear-dice-pool": "Clear Dice Pool",
 	"cloth": "Cloth",
 	"clothing": "Clothing",
