--- a/The Sprawl/translations/es.json
+++ b/The Sprawl/translations/es.json
@@ -70,7 +70,7 @@
     "profit": "Beneficio",
     "program": "Programa",
     "programs-loaded": "Programas Cargados",
-    "programs-owned": "Programs Poseídos",
+    "programs-owned": "Programas Poseídos",
     "research": "Investigar",
     "roll-harm": "Tirar Daño",
     "rolls-cool": "Tira Frialdad",
