--- a/Pathfinder Community/translations/fr.json
+++ b/Pathfinder Community/translations/fr.json
@@ -310,9 +310,9 @@
 	"buff-haste-note": "Lors d'une attaque à outrance, une créature rapide peut faire une attaque supplémentaire avec une arme naturelle ou fabriquée. La vitesse de tous les modes de mouvement augmente.",
 	"buff-heroism": "Héroïsme",
 	"buff-initiative-title": "Bonus à l’Initiative",
-	"buff-inspire-courage": "Inspire Courage",
+	"buff-inspire-courage": "Inspirer le courage",
 	"buff-inspire-courage-note": "+ @{b2_val} bonus de moral aux jets de sauvegarde contre les effets de charme et de peur.",
-	"buff-inspire-greatness": "Inspire Greatness",
+	"buff-inspire-greatness": "Inspirer la grandeur",
 	"buff-inspired-rage": "Rage inspirée",
 	"buff-inspired-rage-note": "**Inspired Rage**, allies other than the skald cannot use any Charisma-, Dexterity-, or Intelligence-based skills (except Acrobatics, Fly, Intimidate, and Ride) or any ability that requires patience or concentration.",
 	"buff-intelligence-based-skills-penalty-title": "Pénalité aux jets de compétence basés sur l'intelligence",
@@ -322,7 +322,7 @@
 	"buff-kinetic-blast-damage-title": "Bonus aux dégâts d’explosion cinétique",
 	"buff-kinetic-blast-title": "Bonus à l'attaque d’explosion cinétique",
 	"buff-mage-armor": "Armure de mage",
-	"buff-magearmor-note": "made of force, incorporeal creatures can't bypass it the way they do normal armor.",
+	"buff-magearmor-note": "faite de force, les créatures incorporelles ne peuvent pas la traverser de la façon dont il le font pour les armures normales.",
 	"buff-magic-vestment": "Panoplie magique",
 	"buff-melee-title": "Bonus aux jets d’attaque de mêlée.",
 	"buff-melee2-title": "Bonus aux jets d'attaque « Mêlée Alt » seulement",
@@ -349,7 +349,7 @@
 	"buff-slow-note": "Applique également l'état préjudiciable \"Chancelant\".",
 	"buff-speed-title": "Bonus à la vitesse de déplacement",
 	"buff-spell-caster-level-title": "Bonus de niveau de lanceur de sorts.",
-	"buff-stardust": "Stardust",
+	"buff-stardust": "Poussière d'étoile",
 	"buff-stardust-note": " @{b1_val} pénalité aux jets de perception basés sur la vue",
 	"buff-strength-based-skills-penalty-title": "Pénalité aux jets de compétence basés sur la force",
 	"buff-strength-based-skills-title": "Bonus aux jets de compétence basés sur la force",
@@ -378,7 +378,7 @@
 	"buttons": "Boutons",
 	"buttons-showsect-cmd": "Afficher les boutons de commande de capacité du fil de discussion",
 	"calculate-abbrv": "Calc",
-	"calculation": "Calculation",
+	"calculation": "Calcul",
 	"calculation-abbrv": "Calc",
 	"cannot-parse": "Cannot parse",
 	"cantrips": "Tours de magie",
@@ -609,7 +609,7 @@
 	"constitution-abbrv": "CON",
 	"constitution-abbrv-default": "CON",
 	"constitution-calculation-abbrv": "CON Calc",
-	"constitution-calculation-skills-abbrv": "Con skills calc",
+	"constitution-calculation-skills-abbrv": "Calc comp. Con",
 	"constitution-penalized": "Pénalité à la CON",
 	"constitution-penalized-title": "Constitution Penalized. Penalties to ability scores only change the modifier, not the score itself. For every 2 points of damage or penalty you take to an ability, apply a –1 penalty to relevant skills and statistics.",
 	"constitution-skills-abbrv": "Comp CON",
@@ -673,7 +673,7 @@
 	"damage-abbrv": "Dég",
 	"damage-ability": "Cap. dégâts",
 	"damage-blade-abbrv": "Dmg mêlée",
-	"damage-calculation-abbrv": "Melee Dmg Calc",
+	"damage-calculation-abbrv": "Dég. mêlée calc",
 	"damage-dice-affected-by-size": "Dés de dégâts touchées par les changements de taille",
 	"damage-macro": "Macro dégâts ",
 	"damage-macro-desc": "Macro de dégâts, doit utiliser des crochets",
@@ -732,11 +732,11 @@
 	"deflection-calculation-abbrv": "Parade calc",
 	"degenerate": "Degenerate",
 	"deity": "Divinité",
-	"delete-ability": "Delete Abilities",
-	"delete-ability-must-confirm-next-checkbox": "Delete all Abilities, must confirm action using next checkbox",
+	"delete-ability": "Effacer les capacités",
+	"delete-ability-must-confirm-next-checkbox": "Supprimer toutes les capacités, demande confirmation par la case à cocher suivante",
 	"delete-all-old-rows-are-you-sure": " Deletes ALL buffs in old list, are you sure?",
 	"delete-all-rows-are-you-sure": " Êtes-vous sûr de vouloir supprimer TOUTES les lignes ?",
-	"delete-attack": "Delete Attacks",
+	"delete-attack": "Effacer les attaques",
 	"delete-attack-must-confirm-next-checkbox": "Delete all Attacks, must confirm action using next checkbox",
 	"delete-buff": "Supprimer les altérations",
 	"delete-buff-must-confirm-next-checkbox": "Supprimer toutes les altérations. Vous devez confirmer votre choix en cochant la case.",
@@ -746,9 +746,9 @@
 	"delete-feat-must-confirm-next-checkbox": "Delete all Orig Feats, must confirm action using next checkbox",
 	"delete-item": "Supprimer Objet",
 	"delete-item-must-confirm-next-checkbox": "Supprimer tous les Equipements, vous devez confirmer votre choix en cochant la case",
-	"delete-mythic-ability": "Delete Mythic Abilities",
+	"delete-mythic-ability": "Effacer les capacités mythiques",
 	"delete-mythic-ability-must-confirm-next-checkbox": "Delete all Mythic Abilities, must confirm action using next checkbox",
-	"delete-mythic-feat": "Delete Mythic Feats",
+	"delete-mythic-feat": "Effacer les dons mythiques",
 	"delete-mythic-feat-must-confirm-next-checkbox": "Delete all Mythic Feats, must confirm action using next checkbox",
 	"delete-old-buff-list": "Deletes all buffs from the OLD list",
 	"delete-race-trait": "Delete Orig Racial Traits",
@@ -1101,7 +1101,7 @@
 	"intelligence-abbrv-default": "INT",
 	"intelligence-calculation-abbrv": "INT Calc",
 	"intelligence-calculation-skills-abbrv": "Int comp calc",
-	"intelligence-penalized": "INT Penalized",
+	"intelligence-penalized": "Pénalité à l'INT",
 	"intelligence-penalized-title": "Intelligence Penalized. Penalties to ability scores only change the modifier, not the score itself. For every 2 points of damage or penalty you take to an ability, apply a –1 penalty to relevant skills and statistics.",
 	"intelligence-skills-abbrv": "Comp INT",
 	"internal-buffer": "Internal Buffer",
@@ -1151,24 +1151,24 @@
 	"legs-title": "Nombre de jambes du personnage. Affecte sa capacité de charge. Vérifiez s'il utilise la capacité de charge d'un quadrupède.",
 	"level": "Niveau",
 	"level-0-spells": "Sorts de niveau 0",
-	"level-1-ordinal": "Sorts de niveau 1",
+	"level-1-ordinal": "1er niveau",
 	"level-1-spells": "Sorts de niveau 1",
-	"level-10-ordinal": "10th Level",
-	"level-2-ordinal": "Sorts de niveau 2",
+	"level-10-ordinal": "10ème niveau",
+	"level-2-ordinal": "2ème niveau",
 	"level-2-spells": "Sorts de niveau 2",
-	"level-3-ordinal": "Sorts de niveau 3",
+	"level-3-ordinal": "3ème niveau",
 	"level-3-spells": "Sorts de niveau 3",
-	"level-4-ordinal": "Sorts de niveau 4",
+	"level-4-ordinal": "4ème niveau",
 	"level-4-spells": "Sorts de niveau 4",
-	"level-5-ordinal": "Sorts de niveau 5",
+	"level-5-ordinal": "5ème niveau",
 	"level-5-spells": "Sorts de niveau 5",
-	"level-6-ordinal": "Sorts de niveau 6",
+	"level-6-ordinal": "6ème niveau",
 	"level-6-spells": "Sorts de niveau 6",
-	"level-7-ordinal": "Sorts de niveau 7",
+	"level-7-ordinal": "7ème niveau",
 	"level-7-spells": "Sorts de niveau 7",
-	"level-8-ordinal": "Sorts de niveau 8",
+	"level-8-ordinal": "8ème niveau",
 	"level-8-spells": "Sorts de niveau 8",
-	"level-9-ordinal": "Sorts de niveau 9",
+	"level-9-ordinal": "9ème niveau",
 	"level-9-spells": "Sorts de niveau 9",
 	"level-abbrv": "Niv",
 	"level-and-ability": "Niveau et capacité de lanceur de sorts",
@@ -1193,8 +1193,8 @@
 	"loads-and-lift": "Charges et Soulever",
 	"local": "Local",
 	"location": "Emplacement",
-	"location0": "Item is Carried",
-	"location1": "Item is not Carried",
+	"location0": "Objet porté",
+	"location1": "Objet non porté",
 	"location10": "Bandeau",
 	"location11": "Cou",
 	"location12": "Anneau1",
@@ -1261,7 +1261,7 @@
 	"melee2-damage-abbrv": "Dég. mêlée Alt",
 	"mental-modifiers-abbrv": "Mentaux",
 	"mental-modifiers-total": "Total des 3 modificateurs de caractéristiques mentales",
-	"menu-whisper": "Menu Whisper:",
+	"menu-whisper": "Menu Chuchotement :",
 	"merge": "Fusion",
 	"merge-buffs": "Copy old buffs list into new buffs list",
 	"merge-class-features": "Merge Orig Class Features into Abilities",
@@ -1280,7 +1280,7 @@
 	"misc-tracking": "Misc Tracking",
 	"miscellaneous-abbrv": "Divers",
 	"miscellaneous-abbrv-default": "Divers",
-	"miscellaneous-attack-bonus-abbrv": "Misc Atk Bonus",
+	"miscellaneous-attack-bonus-abbrv": "Bonus à l'ATT divers",
 	"miscellaneous-bonus": "Bonus divers",
 	"miscellaneous-bonus-abbrv": "Bonus divers",
 	"miscellaneous-damage-bonus-abbrv": "Misc Dmg Bonus",
@@ -1292,13 +1292,13 @@
 	"monster-or-non-player-character": "La feuille représente un monstre ou un PnJ",
 	"monster-or-non-player-character-abbrv": "Monstre / PnJ",
 	"monster-or-pc-indicator": "Indicateur de monstre ou de personnage jouable",
-	"monster-race": "Monster Race",
+	"monster-race": "Race de montre",
 	"monster-racial-hit-dice-abbrv": "Stats et DV raciaux",
 	"monster-rule": "Capacité de monstre",
-	"monster-template": "Monster Template",
+	"monster-template": "Modèle de monstre",
 	"morale": "Moral",
 	"morale-place": "List here under what condition the creature flees combat, if any.",
-	"move-adventure-to-background": "Move Adventure to Background",
+	"move-adventure-to-background": "Déplacer l'aventure vers l'historique",
 	"multiclass": "Multiclassage",
 	"multiple-spellclasses": " A plusieurs classes de lanceur de sorts",
 	"multiplier": "Multiplicateur",
@@ -1373,17 +1373,17 @@
 	"notes": "Notes ",
 	"notes-and-custom-attributes": "Notes and custom attributes",
 	"npc": "PNJ",
-	"npc-abilities": "NPC Abilities",
+	"npc-abilities": "Capacités de PNJ",
 	"npc-ability-checks": "NPC Ability Checks",
 	"npc-ac-compendium-place": "Format: AC nn, touch nn, flat-footed nn (+n DEX, +n natural, +n size, +n dodge)",
 	"npc-adventure": "NPC Adventure",
 	"npc-all-saves": "Toutes sauvegardes de PNJ",
 	"npc-all-skills": "Toutes compétences de PNJ",
 	"npc-aura-compendium-place": "Format: flaming body, unholy aura (DC 26)",
-	"npc-background": "NPC Background",
+	"npc-background": "Historique de PNJ",
 	"npc-buttons": "Boutons PnJ",
 	"npc-combat-skills": "NPC Combat Skills",
-	"npc-consolidated": "NPC Consolidated",
+	"npc-consolidated": "PNJ consolidé",
 	"npc-defenses": "NPC Defenses",
 	"npc-experience-points-abbrv": "PX",
 	"npc-feats-text": "Dons du Compendium",
@@ -1414,7 +1414,7 @@
 	"number-prepared-abbrv": "# Restant",
 	"number-prepared-title": "Indicates the number of prepared spells remaining.",
 	"number-used": "# Utilisé",
-	"number-used-title": "Indicates the number of times a spell has been cast today.",
+	"number-used-title": "Indique le nombre de fois qu'un sort a été lancé aujourd'hui.",
 	"occult": "Occulte",
 	"occult-adventures": "Aventures Occultes",
 	"occult-kineticist": "Occult (Kineticist)",
@@ -1568,7 +1568,7 @@
 	"proficiency-title": "Formé à l'arme ou l'attaque",
 	"prone": " À terre",
 	"psionic-ability-title": "The psionic class key ability modifier source.",
-	"psionic-focus": " Psionic Focus",
+	"psionic-focus": " Focus psionique",
 	"psionic-focus-title": "Is maintaining psionic focus.",
 	"psionic-information": "Psionic Information",
 	"psionic-manifester-level-and-power-points": "Psionic Manifester Level and Power Points",
@@ -1670,9 +1670,9 @@
 	"sanity-beta": "Sanity (BETA)",
 	"sanity-damage": "Dégâts à la santé mentale ",
 	"sanity-edge": "Sanity Edge",
-	"sanity-npc-abbrv": "NPC SAN",
+	"sanity-npc-abbrv": "PNJ SAN",
 	"sanity-save-custom-modifier": "Jet de volonté personnalisé contre les effets affectant la santé mentale",
-	"sanity-save-modifier": "Will Mod",
+	"sanity-save-modifier": "Vol. Mod",
 	"sanity-score": "Score de santé mentale ",
 	"sanity-threshold": "Seuil de santé mentale ",
 	"save": "Sauvegarde",
@@ -1974,10 +1974,10 @@
 	"traits-monster-rules": "Traits/MRules",
 	"treasure": "Trésor",
 	"two-legged-default": "•Bipedal",
-	"two-weapon": "Two Weapon",
+	"two-weapon": "Deux armes",
 	"type": "Type",
 	"type-or-sub-type": "Type/(sous-type)",
-	"unarmed-strike": "Unarmed Strike",
+	"unarmed-strike": "Attaque à main nue",
 	"uncanny-dodge-desc": " Ne pas perdre mod. DEX quand Pris au dépourvu",
 	"uncanny-dodge-title": "If checked, AC will not auto adjust when a condition is checked that causes loss of DEX to AC, except for immobilizing conditions.",
 	"unconscious": " Inconscient",
@@ -2066,8 +2066,8 @@
 	"wisdom": "Sagesse",
 	"wisdom-abbrv": "SAG",
 	"wisdom-abbrv-default": "SAG",
-	"wisdom-calculation-abbrv": "WIS Calc",
-	"wisdom-calculation-skills-abbrv": "Wis skills calc",
+	"wisdom-calculation-abbrv": "SAG Calc",
+	"wisdom-calculation-skills-abbrv": "Calc. Comp. de Sag",
 	"wisdom-penalized": "Pénalité à la SAG",
 	"wisdom-penalized-title": "Wisdom Penalized. Penalties to ability scores only change the modifier, not the score itself. For every 2 points of damage or penalty you take to an ability, apply a –1 penalty to relevant skills and statistics.",
 	"wisdom-skills-abbrv": "Comp SAG",
@@ -2098,6 +2098,6 @@
 	"yes-harmless": "Oui (Inoffensif)",
 	"yes-harmless-object": "Oui (Inoffensif, Objet)",
 	"yes-object": "Oui (Objet)",
-	"yes-or-custom": "Yes or Custom",
+	"yes-or-custom": "Oui ou Personnalisé",
 	"young": "Jeune"
 }
