--- a/Stars_Without_Number_Revised/translations/de.json
+++ b/Stars_Without_Number_Revised/translations/de.json
@@ -444,7 +444,7 @@
 	"INDUCED_COMA_TRIGGER": "Induced Coma Trigger",
 	"INDUCED_COMA_TRIGGER_DESC": "A series of implants are wired to the user’s brain stem, allowing them to trigger an induced therapeutic coma at a mental command. The user appears dead to anything short of a medical inspection, and has no need of respiration, food, or water while the coma is in effect. The user does not heal while in a coma, but any diseases or poisons also halt progression. The user determines how long the coma is to last before triggering it, and is unconscious for its duration. A character can survive in a coma up to two weeks before needing to regain consciousness for as long as they were in the coma.",
 	"INDUSTRIAL_WORK_BOT": "Industrial Work Bot",
-	"INITIATIVE": "Inititative",
+	"INITIATIVE": "Initiative",
 	"INNATE_AC": "Innate AC",
 	"INSTAPANEL": "Instapanel",
 	"INSTAPANEL_DESC": "In its compressed form, an instapanel is a two-kilo cube of ceraplast five centimeters on a side. When a type A power cell is inserted in the cube’s side, it immediately expands to an opaque, waterproof ceraplast sheet 2 meters on each side and a centimeter thick. Five minutes later the ceraplast hardens into a tough, rigid shape, but until then it can be folded or bent by hand. Instapanels can be bonded to one another with a metatool or a toolkit. Breaking an instapanel requires inflicting at least twelve points of damage on it.",
