uc-825 update translations

--- a/5th Edition OGL by Roll20/translations/pl.json
+++ b/5th Edition OGL by Roll20/translations/pl.json
@@ -136,7 +136,7 @@
 	"norm": "Normalnie",
 	"disadv": "Utrudnienie",
 	"name:-u": "NAZWA:",
-	"attack-u": "ATCK",
+	"attack-u": "ATAK",
 	"type:-u": "TYP:",
 	"melee": "Wręcz",
 	"ranged": "Dystansowy",
