--- a/5th Edition OGL by Roll20/translations/fr.json
+++ b/5th Edition OGL by Roll20/translations/fr.json
@@ -277,7 +277,7 @@
 	"weapon-proficiencies-u": "ARMES MAÎTRISÉES",
 	"other-prof-langs-u": "AUTRES MAÎTRISES &amp; LANGUES",
 	"prof-langs-u": "AUTRES MAÎTRISES &amp; LANGUES",
-	"init": "Initiative",
+	"init": "Inititative",
 	"init-u": "INITIATIVE",
 	"hp-max-u": "Points de vie maximum",
 	"hp-current-u": "POINTS DE VIE ACTUELS",
@@ -675,5 +675,5 @@
 	"you-can-increase-two-abilites": "Vous pouvez augmenter deux de vos caractéristiques d'1 point ou une de 2",
 	"before-leveling": "Avant la prise de niveau",
 	"after-leveling": "Après la prise de niveau",
-	"charmancer-removed-spells-marked-pt1": "Removed spells will be marked with a <span>r</span> symbol so you can find it easily if you change your mind."
+	"charmancer-removed-spells-marked-pt1": "Les sorts retirés seront marqués avec un symbole <span>r</span> de façon à ce que vous les retrouviez facilement si vous changez d'avis."
 }
