--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -142,7 +142,7 @@
 	"cantrip": "tour de magie",
 	"cantrip_level": "Niveau",
 	"cantrips": "tours de magie",
-	"cap": "cap",
+	"cap": "max",
 	"cast": "composantes",
 	"catchphrases": "phrases fétiches",
 	"cha": "cha",
@@ -314,34 +314,34 @@
 	"hit_points_ancestry": "points de vie de l'ascendance",
 	"hit_points_class": "points de vie de classe",
 	"hit_points_current": "Points de Vie actuel",
-	"hit_points_dying": "hit points dying",
+	"hit_points_dying": "PV de décès",
 	"hit_points_item": "Objet",
 	"hit_points_max": "Points de Vie max",
 	"hit_points_notes": "Notes",
 	"hit_points_other": "Autres",
-	"hit_points_roll": "hit points roll",
+	"hit_points_roll": "jet de points de vie",
 	"hit_points_settings": "Modifier",
 	"hit_points_temporary": "PV temporaire",
-	"hit_points_wounded": "hit points wounded",
+	"hit_points_wounded": "PV blessé",
 	"hp": "pv",
 	"illusion": "ILLUSION",
 	"immunities": "immunités",
 	"initiative": "initiative",
 	"innate_daily_uses": "utilisations quotidiennes de sorts innés",
 	"innate_spell": "sort inné",
-	"innate_spell_area": "innate spell area",
-	"innate_spell_cast": "innate spell cast",
-	"innate_spell_critical_failure": "innate spell critical failure",
-	"innate_spell_critical_success": "innate spell critical success",
+	"innate_spell_area": "zone de sort inné",
+	"innate_spell_cast": "lancement de sort inné",
+	"innate_spell_critical_failure": "échec critique de sort inné",
+	"innate_spell_critical_success": "succès critique de sort inné",
 	"innate_spell_description": "description de sort inné",
 	"innate_spell_duration": "durée de sort inné",
 	"innate_spell_level": "niveau de sort inné",
 	"innate_spell_name": "nom de sort inné",
 	"innate_spell_range": "portée de sort inné",
-	"innate_spell_save_failure": "innate spell save failure",
+	"innate_spell_save_failure": "sauvegarde d'échec de sort inné",
 	"innate_spell_settings": "Modifier",
 	"innate_spell_target": "cible de sort inné",
-	"innate_spell_traits": "innate spell traits",
+	"innate_spell_traits": "traits de sorts innés",
 	"innate_spells": "sorts innés",
 	"int": "int",
 	"intelligence": "intelligence",
@@ -351,7 +351,7 @@
 	"intelligence_score": "Valeur",
 	"intelligence_score_temporary": "Mod. temporaire à la valeur d'Intelligence",
 	"intelligence_settings": "Modifier",
-	"interaction_abilities": "Interaction Abilities",
+	"interaction_abilities": "Capacités d'interaction",
 	"interaction_ability": "Caractéristique",
 	"intimidation": "intimidation",
 	"intimidation_ability_input": "Caractéristique",
@@ -472,12 +472,12 @@
 	"notes": "notes",
 	"npc": "pnj",
 	"npc_placeholder_immunity": "maladie, émotion, poison",
-	"npc_placeholder_languages": "aquan, common, dwarven",
+	"npc_placeholder_languages": "aquan, commun, nain",
 	"npc_placeholder_resist": "électricité 3",
-	"npc_placeholder_saves": "+2 to all saves vs. magic",
+	"npc_placeholder_saves": "+2 à toutes les sauvegardes contre la magie",
 	"npc_placeholder_speed": "20 pieds, nage 80 pieds",
 	"npc_placeholder_speed_notes": "nage 80 pieds",
-	"npc_placeholder_traits": "rare, aquatic, humanoid",
+	"npc_placeholder_traits": "rare, aquatique, humanoïde",
 	"npc_placeholder_worn_item": "épée courte +1",
 	"occult power": "POUVOIR OCCULTE",
 	"occult spell": "SORT OCCULTE",
@@ -492,8 +492,8 @@
 	"occultism_rank_select": "Sélectionnez le rang",
 	"occultism_settings": "Modifier",
 	"occultism_temporary": "Mod. temporaire",
-	"offensive": "offensive",
-	"offensive_or_proactive_abilities": "offensive or proactive abilities",
+	"offensive": "offensif",
+	"offensive_or_proactive_abilities": "capacités offensives ou proactives",
 	"options": "options",
 	"or": "ou",
 	"organizations": "organisations",
@@ -504,7 +504,7 @@
 	"other_item_notes": "Notes",
 	"other_item_settings": "Modifier",
 	"other_items": "autres objets",
-	"other_weapon_proficiencies_name": "other weapon proficiencies name",
+	"other_weapon_proficiencies_name": "nom des autres maîtrises d'arme",
 	"other_weapon_proficiencies_rank": "Rang",
 	"p": "p",
 	"perceive": "Test",
@@ -533,8 +533,8 @@
 	"platinum_pieces": "pièces de platine",
 	"player_name": "nom du joueur",
 	"plus": "plus",
-	"power": "power",
-	"powers": "POWERS",
+	"power": "pouvoir",
+	"powers": "POUVOIRS",
 	"pp": "pp",
 	"prep": "prép",
 	"prepared": "préparé",
@@ -545,7 +545,7 @@
 	"prof": "rang",
 	"proficiencies": "rangs",
 	"proficiency": "rang",
-	"query_whisper_roll": "query whisper roll",
+	"query_whisper_roll": "murmurer les jets",
 	"range": "Portée",
 	"range_attack_damage": "Dégâts",
 	"range_attack_damage_type": "Type de dégâts",
@@ -696,14 +696,14 @@
 	"spell_dc_key_ability_select": "Caractéristique",
 	"spell_dc_notes": "Notes",
 	"spell_dc_proficiency": "Rang",
-	"spell_dc_rank": "spell dc rank",
+	"spell_dc_rank": "rang de dd de sort",
 	"spell_dc_temporary": "Mod. temporaire",
 	"spell_slots_per_day": "emplacement de sorts par jour",
 	"spellcaster": "jeteur de sort",
 	"spells": "sorts",
 	"spontaneous": "spontané",
 	"spontaneous_spell_caster": "Lanceur de sorts spontanés",
-	"spontaneous_spell_slots": "spontaneous spell slots remaining",
+	"spontaneous_spell_slots": "emplacements de sorts spontanés restants",
 	"statistics": "statistiques",
 	"stealth": "furtivité",
 	"stealth_ability_input": "Caractéristique",
@@ -717,12 +717,12 @@
 	"stealth_settings": "Modifier",
 	"stealth_temporary": "Mod. temporaire",
 	"str": "for",
-	"str_half": "str half",
+	"str_half": "for/2",
 	"strenght_modifier_temporary": "Mod. temporaire au modificateur de Force",
 	"strenght_notes": "Notes",
 	"strenght_score": "Valeur",
 	"strength": "force",
-	"strength_modifier": "strength modifier",
+	"strength_modifier": "modificateur de Force",
 	"strength_modifier_display": "Modificateur de Force",
 	"strength_score_temporary": "Mod. temporaire à la valeur de Force",
 	"strength_settings": "Modifier",
@@ -766,7 +766,7 @@
 	"untrained": "non entraîné",
 	"untrained_0": "non entraîné +0",
 	"usage": "utilisation",
-	"use": "Use",
+	"use": "Utilisation",
 	"v": "v",
 	"versus": "contre",
 	"w_spec": "spécialisation",
@@ -803,31 +803,31 @@
 	"xp": "px",
 	"disclaimer": "© 2019 Paizo Inc. Paizo, le logo du golem de Paizo, Pathfinder et le logo Pathfinder sont des marques déposées de Paizo Inc. Pathfinder Adventure Paths, Pathfinder Roleplaying Game, Pathfinder World Guide et le logo \"P\" de Pathfinder sont des marques de Paizo Inc. Tous les titres de Paizo et les noms de personnages de Paizo et les ressemblances significatives sont la propriété et le copyright de Paizo, Inc. aux États-Unis et dans les autres pays.",
 	"pc-or-npc": "PJ ou PNJ",
-	"pc-or-npc-info": "This option sets new characters to default to the PC character sheet or NPC card style sheet. It defaults to PC (Player Character). Set to NPC is useful if the player characters have already been created and all new character sheets added to the game will likely represent non player characters.",
+	"pc-or-npc-info": "Cette option définit les nouveaux personnages par défaut sur la feuille de personnage du PJ ou sur la feuille de style de carte de PNJ. La valeur par défaut est PJ (personnage joueur). La valeur PNJ est utile si les personnages du joueur ont déjà été créés et que toutes les nouvelles feuilles de personnage ajoutées au jeu représentent probablement des personnages non joueurs.",
 	"qty": "qt.",
 	"quantity": "quantité",
-	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM.",
+	"whisp-rolls-gm-info": "Tous les jets sont envoyés dans le chat pour tous les joueurs par défaut. 'Demander' affiche une popup avant chaque jet de dé, pour indiquer si vous voulez n'afficher le jet qu'à vous-même et au MJ. 'Bascule' ajoutera un bouton sur la barre d'onglets pour activer ou désactiver. 'Toujours' n'enverra les jets qu'à vous et au MJ.",
 	"melee_attack_damage_additional": "dégâts supplémentaires d'attaque de mêlée",
 	"damage_additional": "dégâts supplémentaires",
 	"damage_additional_placeholder": "[[1d6]] acide, [[1d6]] chaos, et [[1d6]] mal, et [[2d6]] tranchant vs. plantes",
 	"range_attack_damage_additional": "dégâts supplémentaires d'attaque à distance",
-	"building_npc": "building npc ...",
-	"settings_bar1_value": "BAR 1 VALUE:",
-	"settings_bar1_value_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 1's value to this attribute.",
-	"settings_bar1_max": "BAR 1 MAX:",
-	"settings_bar1_max_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 1's max to this attribute.",
-	"settings_bar1_link": "BAR 1 LINK:",
-	"settings_bar1_link_desc": "On Default Tokens created by doing a drop onto the virtual table top, link the Bar 1's value to this attribute. If set this will override all other bar settings.",
-	"settings_bar2_value": "BAR 2 VALUE:",
-	"settings_bar2_value_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 2's value to this attribute.",
-	"settings_bar2_max": "BAR 2 MAX:",
-	"settings_bar2_max_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 2's max to this attribute.",
-	"settings_bar2_link": "BAR 2 LINK:",
-	"settings_bar2_link_desc": "On Default Tokens created by doing a drop onto the virtual table top, link the Bar 2's value to this attribute. If set this will override all other bar settings.",
-	"settings_bar3_value": "BAR 3 VALUE:",
-	"settings_bar3_value_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 3's value to this attribute.",
-	"settings_bar3_max": "BAR 3 MAX:",
-	"settings_bar3_max_desc": "On Default Tokens created by doing a drop onto the virtual table top, set the Bar 3's max to this attribute.",
-	"settings_bar3_link": "BAR 3 LINK:",
-	"settings_bar3_link_desc": "On Default Tokens created by doing a drop onto the virtual table top, link the Bar 3's value to this attribute. If set this will override all other bar settings."
+	"building_npc": "construction du Pnj...",
+	"settings_bar1_value": "VALEUR BARRE 1&nbsp;:",
+	"settings_bar1_value_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur de la barre 1.",
+	"settings_bar1_max": "BARRE 1 MAX :",
+	"settings_bar1_max_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur maximale de la barre 1.",
+	"settings_bar1_link": "LIEN BARRE 1&nbsp;:",
+	"settings_bar1_link_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle lieront la valeur de cet attribut à la barre 1. Si ce paramètre est défini, tous les autres paramètres de barre seront ignorés.",
+	"settings_bar2_value": "VALEUR BARRE 2&nbsp;:",
+	"settings_bar2_value_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur de la barre 2.",
+	"settings_bar2_max": "MAX BARRE 2&nbsp;:",
+	"settings_bar2_max_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur maximale de la barre 2.",
+	"settings_bar2_link": "LIEN BARRE 2&nbsp;:",
+	"settings_bar2_link_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle lieront la valeur de cet attribut à la barre 2. Si ce paramètre est défini, tous les autres paramètres de barre seront ignorés.",
+	"settings_bar3_value": "VALEUR BARRE 3&nbsp;:",
+	"settings_bar3_value_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur de la barre 3.",
+	"settings_bar3_max": "MAX BARRE 3&nbsp;:",
+	"settings_bar3_max_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle utiliseront la valeur de cet attribut pour la valeur maximale de la barre 3.",
+	"settings_bar3_link": "LIEN BARRE 3&nbsp;:",
+	"settings_bar3_link_desc": "Par défaut, les pions créés en faisant un glisser-déposer sur la table virtuelle lieront la valeur de cet attribut à la barre 3. Si ce paramètre est défini, tous les autres paramètres de barre seront ignorés."
 }
