--- a/Call_of_Cthulhu_7th_Ed/translations/pl.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/pl.json
@@ -1,189 +1,189 @@
 {
-	"investigatorinfo-u": "Investigator Info",
-	"heroinfo-u": "Hero Info",
-	"name-u": "Name",
-	"player-u": "Player",
-	"occupation-u": "Occupation ",
-	"archetype-u": "Archetype",
-	"age-u": "Age",
-	"sex-u": "Sex",
-	"residence-u": "Residence",
-	"birthplace-u": "Birthplace",
-	"characteristics-u": "Characteristics",
-	"STR-u": "STR",
-	"STR-r-txt": "STR Roll",
-	"DEX-u": "DEX",
-	"DEX-r-txt": "DEX Roll",
-	"POW-u": "POW",
-	"POW-r-txt": "POW Roll",
-	"CON-u": "CON",
-	"CON-r-txt": "CON Roll",
-	"APP-u": "APP",
-	"APP-r-txt": "APP Roll",
-	"EDU-u": "EDU",
-	"EDU-r-txt": "EDU Roll",
-	"SIZ-u": "SIZ",
-	"SIZ-r-txt": "SIZ Roll",
+	"investigatorinfo-u": "Informacje o badaczu",
+	"heroinfo-u": "Informacje o bohaterze",
+	"name-u": "Imię badacza",
+	"player-u": "Gracz",
+	"occupation-u": "Zawód ",
+	"archetype-u": "Pierwowzór",
+	"age-u": "Wiek",
+	"sex-u": "Płeć",
+	"residence-u": "Miejsce zamieszkania",
+	"birthplace-u": "Miejsce urodzenia",
+	"characteristics-u": "Cechy",
+	"STR-u": "S",
+	"STR-r-txt": "Rzut S",
+	"DEX-u": "ZR",
+	"DEX-r-txt": "Rzut ZR",
+	"POW-u": "MOC",
+	"POW-r-txt": "Rzut MOC",
+	"CON-u": "KON",
+	"CON-r-txt": "Rzut KON",
+	"APP-u": "WYG",
+	"APP-r-txt": "Rzut WYG",
+	"EDU-u": "WYK",
+	"EDU-r-txt": "Rzut WYK",
+	"SIZ-u": "BC",
+	"SIZ-r-txt": "Rzut BC",
 	"INT-u": "INT",
-	"INT-r-txt": "INT Roll",
-	"Move rate-u": "Move rate",
-	"Move rate-r-txt": "Move rate Roll",
-	"HP-u": "Hit Points",
-	"HP-r-txt": "Hit Points Roll",
-	"current": "current",
-	"majorwound-u": "Major Wound",
-	"pulphp-u": "Pulp HP",
-	"luck-u": "Luck",
-	"luck-r-txt": "Luck Roll",
-	"damagebonus-u": "Damage Bonus",
-	"None": "None",
-	"build-u": "Build",
-	"sanity-u": "Sanity",
+	"INT-r-txt": "Rzut INT",
+	"Move rate-u": "Ruch",
+	"Move rate-r-txt": "Rzut na ruch",
+	"HP-u": "PW",
+	"HP-r-txt": "Rzut PW",
+	"current": "obecnie",
+	"majorwound-u": "Ciężkie rany",
+	"pulphp-u": "Miazga",
+	"luck-u": "Szczęście",
+	"luck-r-txt": "Rzut na szczęście",
+	"damagebonus-u": "Dodatkowe obrażenia",
+	"None": "Brak",
+	"build-u": "Krzepa",
+	"sanity-u": "Poczytalność",
 	"4/5-u": "4/5",
-	"pulp-z": "Pulp",
-	"sanity-r-txt": "Sanity Roll",
+	"pulp-z": "Miazga",
+	"sanity-r-txt": "Rzut na poczytalność",
 	"start": "start",
-	"current-u": "current",
+	"current-u": "obecnie",
 	"max-u": "max",
-	"tempinsane-u": "Temp. Insane",
+	"tempinsane-u": "Tymcz. obłęd",
 	"indefinsane-u": "Indef. Insane",
-	"bouts-of-madness-u": "Bouts of Madness",
+	"bouts-of-madness-u": "Napad szaleństwa",
 	"pulp-bouts-of-madness-u": "Pulp Bouts of Madness",
-	"bom-real-time": "Real-Time",
-	"bom-summary": "Summary",
-	"stable": "Stable",
-	"magicpoints-u": "Magic Points",
-	"dicerolls-u": "Dice Rolls",
+	"bom-real-time": "Czas rzeczywisty",
+	"bom-summary": "W sumie",
+	"stable": "Stabilny",
+	"magicpoints-u": "Punkty magii",
+	"dicerolls-u": "Rzut kośćmi",
 	"custom-u": "Custom",
-	"investigatorskills-u": "Investigator Skills",
-	"accounting_da-u": "Accounting(10%)",
-	"animalhandling_da-u": "Animal Handling(15%)",
-	"accounting-u": "Accounting(05%)",
-	"accounting-r-txt": "Accounting Roll",
-	"anthropology-u": "Anthropology(01%)",
-	"anthropology-r-txt": "Anthropology Roll",
-	"artandcraft-u": "Art and Craft(05%)",
-	"artandcraft1": "Art and Craft 1",
-	"artandcraft2": "Art and Craft 2",
-	"appraise-u": "Appraise(05%)",
-	"appraise-r-txt": "Appraise Roll",
-	"appraise_et-u": "Appraise(10%)",
-	"appraise_ic-u": "Appraise(15%)",
-	"archaeology-u": "Archaeology(01%)",
-	"archaeology-r-txt": "Archaeology Roll",
-	"charm-u": "Charm(15%)",
-	"charm-r-txt": "Charm Roll",
-	"civics-u": "Civics(10%)",
-	"climb-u": "Climb(20%)",
-	"climb-r-txt": "Climb Roll",
+	"investigatorskills-u": "Umiejętności badacza",
+	"accounting_da-u": "Księgowość(10%)",
+	"animalhandling_da-u": "Tresura zwierząt(15%)",
+	"accounting-u": "Księgowość(05%)",
+	"accounting-r-txt": "Rzut na Księgowość",
+	"anthropology-u": "Antropologia(01%)",
+	"anthropology-r-txt": "Rzut na Antropologię",
+	"artandcraft-u": "Sztuka/Rzemiosło(05%)",
+	"artandcraft1": "Sztuka/Rzemiosło 1",
+	"artandcraft2": "Sztuka/Rzemiosło 2",
+	"appraise-u": "Wycena(05%)",
+	"appraise-r-txt": "Rzut na Wycenę",
+	"appraise_et-u": "Wycena(10%)",
+	"appraise_ic-u": "Wycena(15%)",
+	"archaeology-u": "Archeologia(01%)",
+	"archaeology-r-txt": "Rzut na Archeologię",
+	"charm-u": "Urok osobisty(15%)",
+	"charm-r-txt": "Rzut na Urok osobisty",
+	"civics-u": "WOS(10%)",
+	"climb-u": "Wspinaczka(20%)",
+	"climb-r-txt": "Rzut na Wspinaczkę",
 	"status-u": "Status",
-	"creditrating-u": "Credit Rating(00%)",
-	"creditrating-r-txt": "Credit Rating Roll",
-	"cthulhumythos-u": "Cthulhu Mythos(00%)",
-	"cthulhumythos-r-txt": "Cthulhu Mythos Roll",
-	"disguise-u": "Disguise(05%)",
-	"disguise-r-txt": "Disguise Roll",
-	"dodge-u": "Dodge(half DEX)",
-	"dodge-r-txt": "Dodge Roll",
-	"drivewagon-u": "Drive Wagon(20%)",
-	"driveauto-u": "Drive Auto(20%)",
-	"driveauto-r-txt": "Drive Auto Roll",
-	"drive-u": "Drive(20%)",
-	"elecrepair-u": "Elec Repair(10%)",
-	"elecrepair-r-txt": "Elec Repair Roll",
-	"elecrepair_ow-u": "Elec. Repair(00%)",
+	"creditrating-u": "Majętność(00%)",
+	"creditrating-r-txt": "Rzut na Majętność",
+	"cthulhumythos-u": "Mity Cthulhu(00%)",
+	"cthulhumythos-r-txt": "Rzut na Mity Cthulhu",
+	"disguise-u": "Ukrywanie(05%)",
+	"disguise-r-txt": "Rzut na Ukrywanie",
+	"dodge-u": "Uniki (połowa ZR)",
+	"dodge-r-txt": "Rzut na Uniki",
+	"drivewagon-u": "Prowadzenie wozu(20%)",
+	"driveauto-u": "Prowadzenie samochodu(20%)",
+	"driveauto-r-txt": "Rzut na Prowadzenie samochodu",
+	"drive-u": "Prowadzenie(20%)",
+	"elecrepair-u": "Elektryka(10%)",
+	"elecrepair-r-txt": "Rzut na Elektrykę",
+	"elecrepair_ow-u": "Elektryka(00%)",
 	"empire-u": "Empire(25%)",
-	"fasttalk-u": "Fast Talk(05%)",
-	"fasttalk-r-txt": "Fast Talk Roll",
-	"fighting(brawl)-u": "Fighting(Brawl)(25%)",
-	"fighting_brawl-r-txt": "Fighting(Brawl) Roll",
-	"fightspec1": "Fighting Specialization 1",
-	"fightspec2": "Fighting Specialization 2",
-	"fightspec3": "Fighting Specialization 3",
-	"shield-u": "Shield(15%)",
-	"fighting_other-u": "Fighting(Other)",
-	"firearms(hg)-u": "Firearms(HG)(20%)",
-	"firearms_hg-r-txt": "Firearms(HG) Roll",
-	"firearms(r/s)-u": "Firearms(R/S)(25%)",
-	"firearms_rs-r-txt": "Firearms(R/S) Roll",
-	"firearms_s_m_g-u": "Firearms(SMG)(15%)",
-	"firearms_other-u": "Firearms(Other)",
-	"firearms_electr-u": "Firearms(Electr.)(25%)",
-	"firstaid-u": "First Aid(30%)",
-	"firstaid-r-txt": "First Aid Roll",
-	"gambling-u": "Gambling(10%)",
-	"history-u": "History(05%)",
-	"history-r-txt": "History Roll",
+	"fasttalk-u": "Gadanina(05%)",
+	"fasttalk-r-txt": "Rzut na Gadaninę",
+	"fighting(brawl)-u": "Walka wręcz(25%)",
+	"fighting_brawl-r-txt": "Rzut na walkę wręcz",
+	"fightspec1": "Walka (specjalizacja 1)",
+	"fightspec2": "Walka (specjalizacja 2)",
+	"fightspec3": "Walka (specjalizacja 3)",
+	"shield-u": "Tarcza(15%)",
+	"fighting_other-u": "Walka (inne)",
+	"firearms(hg)-u": "Broń palna (krótka)(20%)",
+	"firearms_hg-r-txt": "Rzut na Broń palną (krótka)",
+	"firearms(r/s)-u": "Broń palna (długa)(25%)",
+	"firearms_rs-r-txt": "Rzut na Broń palną (długa)",
+	"firearms_s_m_g-u": "Broń palna(SMG)(15%)",
+	"firearms_other-u": "Broń palna (inna)",
+	"firearms_electr-u": "Broń palna(Elektr.)(25%)",
+	"firstaid-u": "Pierwsza pomoc(30%)",
+	"firstaid-r-txt": "Rzut na Pierwszą pomoc",
+	"gambling-u": "Hazard(10%)",
+	"history-u": "Historia(05%)",
+	"history-r-txt": "Rzut na Historię",
 	"insight-da": "Insight(05%)",
-	"intimidate-u": "Intimidate(15%)",
-	"intimidate-r-txt": "Intimidate Roll",
-	"jump_da-u": "Jump(25%)",
-	"jump-u": "Jump(20%)",
-	"jump-r-txt": "Jump Roll",
-	"language(own)-u": "Language(Own)(EDU)",
-	"language_own-r-txt": "Language(Own) Roll",
-	"otherlanguage1": "Other Language 1",
-	"otherlanguage2": "Other Language 2",
-	"law-u": "Law(05%)",
-	"law-r-txt": "Law Roll",
-	"libraryuse-u": "Library Use(20%)",
-	"libraryuse-r-txt": "Library Use Roll",
-	"libraryuse_da-u": "Library Use(05%)",
-	"listen_da-u": "Listen(25%)",
-	"listen-u": "Listen(20%)",
-	"listen-r-txt": "Listen Roll",
-	"listen_mdr-u": "Listen(25%)",
-	"locksmith-u": "Locksmith(01%)",
-	"locksmith-r-txt": "Locksmith Roll",
+	"intimidate-u": "Zastraszanie(15%)",
+	"intimidate-r-txt": "Rzut na Zastraszanie",
+	"jump_da-u": "Skakanie(25%)",
+	"jump-u": "Skakanie(20%)",
+	"jump-r-txt": "Rzut na Skakanie",
+	"language(own)-u": "Język ojczysty (WYK)",
+	"language_own-r-txt": "Rzut na Język ojczysty",
+	"otherlanguage1": "Język obcy 1",
+	"otherlanguage2": "Język obcy 2",
+	"law-u": "Prawo(05%)",
+	"law-r-txt": "Rzut na prawo",
+	"libraryuse-u": "Korzystanie z bibliotek(20%)",
+	"libraryuse-r-txt": "Rzut na Korzystanie z bibliotek",
+	"libraryuse_da-u": "Korzystanie z bibliotek(05%)",
+	"listen_da-u": "Nasłuchiwanie(25%)",
+	"listen-u": "Nasłuchiwanie(20%)",
+	"listen-r-txt": "Rzut na Nasłuchiwanie",
+	"listen_mdr-u": "Nasłuchiwanie(25%)",
+	"locksmith-u": "Ślusarstwo(01%)",
+	"locksmith-r-txt": "Rzut na Ślusarstwo",
 	"mechrepair-u": "Mech Repair(10%)",
 	"mechrepair-r-txt": "Mech Repair Roll",
 	"medicine-u": "Medicine(01%)",
-	"medicine-r-txt": "Medicine Roll",
+	"medicine-r-txt": "Rzut na ",
 	"naturalworld-u": "Natural World(10%)",
-	"naturalworld-r-txt": "Natural World Roll",
+	"naturalworld-r-txt": "Rzut na ",
 	"naturalworld_da-u": "Natural World(20%)",
 	"naturalworld_et-u": "Natural World(20%)",
 	"navigate-u": "Navigate(10%)",
-	"navigate-r-txt": "Navigate Roll",
+	"navigate-r-txt": "Rzut na ",
 	"occult-u": "Occult(05%)",
-	"occult-r-txt": "Occult Roll",
+	"occult-r-txt": "Rzut na ",
 	"ophvmachine-u": "Op Hv Machine(01%)",
 	"ophvmachine-r-txt": "Op Hv Machine Roll",
 	"ownkingdom_da-u": "Own Kingdom(20%)",
 	"otherkingdom1": "Other Kingdom 1",
 	"otherkingdom2": "Other Kingdom 2",
 	"persuade-u": "Persuade(10%)",
-	"persuade-r-txt": "Persuade Roll",
+	"persuade-r-txt": "Rzut na ",
 	"pilotboat-u": "Pilot Boat(01%)",
 	"psychology-u": "Psychology(10%)",
-	"psychology-r-txt": "Psychology Roll",
+	"psychology-r-txt": "Rzut na ",
 	"psychoanalysis-u": "Psychoanalysis(01%)",
-	"psychoanalysis-r-txt": "Psychoanalysis Roll",
+	"psychoanalysis-r-txt": "Rzut na ",
 	"readandwritelang1": "Read and Write Language 1",
 	"readandwritelang2": "Read and Write Language 2",
 	"religion-u": "Religion(20%)",
 	"repair/devise-u": "Repair/Devise(20%)",
 	"ride-u": "Ride(05%)",
-	"ride-r-txt": "Ride Roll",
+	"ride-r-txt": "Rzut na ",
 	"ride_ow-u": "Ride(15%)",
 	"rope_use_ow-u": "Rope Use(05%)",
 	"scavenge-u": "Scavenge(15%)",
 	"sleightofhand-u": "Sleight of Hand(10%)",
-	"sleightofhand-r-txt": "Sleight of Hand Roll",
+	"sleightofhand-r-txt": "Rzut na ",
 	"sleight_of_hand_da": "Sleight of Hand(25%)",
 	"spothidden-u": "Spot Hidden(25%)",
-	"spothidden-r-txt": "Spot Hidden Roll",
+	"spothidden-r-txt": "Rzut na ",
 	"stealth-u": "Stealth(20%)",
 	"stealth-r-txt": "Stealth Roll",
 	"swim_da-u": "Swim(25%)",
 	"swim-u": "Swim(20%)",
-	"swim-r-txt": "Swim Roll",
+	"swim-r-txt": "Rzut na ",
 	"techrepair-u": "Tech. Repair(01%)",
 	"throw-u": "Throw(20%)",
-	"throw-r-txt": "Throw Roll",
+	"throw-r-txt": "Rzut na ",
 	"throw_da-u": "Throw(25%)",
 	"track-u": "Track(10%)",
-	"track-r-txt": "Track Roll",
+	"track-r-txt": "Rzut na ",
 	"trap-u": "Trap(10%)",
 	"otherskills-u": "Other Skills:",
 	"animalhandling-u": "Animal Handling(05%)",
@@ -196,122 +196,122 @@
 	"computermaint_ic-u": "Computer Maint.(05%)",
 	"pilot-u": "Pilot(01%)",
 	"demolitions-u": "Demolitions(01%)",
-	"demolitions-txt": "Demolitions Roll",
-	"readlips-u": "Read Lips(01%)",
-	"electronics-u": "Electronics(01%)",
-	"science-u": "Science(01%)",
-	"fighting(varies)-u": "Fighting(Varies)",
+	"demolitions-txt": "Rzut na ",
+	"readlips-u": "Czytanbie z ruchu warg(01%)",
+	"electronics-u": "Elektronika(01%)",
+	"science-u": "Nauka(01%)",
+	"fighting(varies)-u": "Walka (różne)",
 	"survival-u": "Survival(10%)",
 	"sysops-u": "SysOps(10%)",
 	"zerog_ic-u": "Zero-G(05%)",
 	"talents-u": "Talents",
 	"shield-z": "Shield",
-	"head-u": "Head",
-	"body-u": "Body",
-	"l_arm-u": "L.Arm",
-	"chest-u": "Chest",
-	"r_arm-u": "R.Arm",
-	"l_leg-u": "L.Leg",
-	"abdmn-u": "Abdmn",
-	"r_leg-u": "R.Leg",
-	"item-u": "Item",
-	"defence-u": "Defence",
-	"weapons-u": "Weapons",
-	"combat-u": "Combat",
-	"weaponname-u": "Weapon",
-	"skill-u": "Skill",
-	"damage-u": "Damage",
-	"range-u": "Range",
-	"attacks-u": "Attacks",
-	"ammo-u": "Ammo",
-	"malf-u": "Malf",
-	"Fighting(Brawl)": "Fighting(Brawl)",
-	"Firarms(HG)": "Firarms(HG)",
-	"Firarms(SMG)": "Firarms(SMG)",
-	"Firarms(R/S)": "Firarms(R/S)",
-	"Fighting(Other)": "Fighting(Other)",
-	"Firarms(Electr.)": "Firarms(Electr.)",
-	"Throw": "Throw",
-	"Other Skill #1": "Other Skill #1",
-	"Other Skill #2": "Other Skill #2",
-	"Other Skill #3": "Other Skill #3",
-	"Other Skill #4": "Other Skill #4",
-	"Other Skill #5": "Other Skill #5",
-	"Other Skill #6": "Other Skill #6",
-	"Other Skill #7": "Other Skill #7",
-	"Other Skill #8": "Other Skill #8",
-	"Other Skill #9": "Other Skill #9",
-	"Other Skill #10": "Other Skill #10",
-	"spells-u": "Spells",
+	"head-u": "Głowa",
+	"body-u": "Korpus",
+	"l_arm-u": "L.Ręka",
+	"chest-u": "Klatka piersiowa",
+	"r_arm-u": "P.Ręka",
+	"l_leg-u": "L.Noga",
+	"abdmn-u": "Brzuch",
+	"r_leg-u": "P.Noga",
+	"item-u": "Przedmiot",
+	"defence-u": "Obrona",
+	"weapons-u": "Bronie",
+	"combat-u": "Walka",
+	"weaponname-u": "Broń",
+	"skill-u": "Umiejętność",
+	"damage-u": "Obrażenia",
+	"range-u": "Zasięg",
+	"attacks-u": "Ataki",
+	"ammo-u": "Amunicja",
+	"malf-u": "Zaw.",
+	"Fighting(Brawl)": "Nieuzbrojony",
+	"Firarms(HG)": "Broń palna (krótka)",
+	"Firarms(SMG)": "Broń palna(SMG)",
+	"Firarms(R/S)": "Broń palna (długa)",
+	"Fighting(Other)": "Walka (pozostałe)",
+	"Firarms(Electr.)": "Broń palna (elektr.)",
+	"Throw": "Rzut",
+	"Other Skill #1": "Inna umiejętność #1",
+	"Other Skill #2": "Inna umiejętność #2",
+	"Other Skill #3": "Inna umiejętność #3",
+	"Other Skill #4": "Inna umiejętność #4",
+	"Other Skill #5": "Inna umiejętność #5",
+	"Other Skill #6": "Inna umiejętność #6",
+	"Other Skill #7": "Inna umiejętność #7",
+	"Other Skill #8": "Inna umiejętność #8",
+	"Other Skill #9": "Inna umiejętność #9",
+	"Other Skill #10": "Inna umiejętność #10",
+	"spells-u": "Zaklęcia",
 	"companions&mounts-u": "Companions & Mounts",
-	"vehicles-u": "Vehicles",
-	"cap-u": "Capacity",
+	"vehicles-u": "Pojazdy",
+	"cap-u": "Ładowność",
 	"vehicleattack-u": "Vehicular Impact Attack",
 	"operatorskill": "Operator's Skill",
 	"MountedWeaponSkill": "Mounted Weapon Skill",
 	"generalinfo-u": "General Info",
 	"cargo-u": "Cargo",
 	"passengers-u": "Passengers",
-	"san-u": "SAN",
-	"HP-z": "HP",
-	"MP-z": "MP",
+	"san-u": "POCZ",
+	"HP-z": "PW",
+	"MP-z": "PM",
 	"armor-z": "Armor",
-	"db-z": "DB",
+	"db-z": "MO",
 	"bdb-u": "B/DB",
-	"damage&db-z": "Dam+DB",
-	"dam-z": "Dam",
-	"MOV-u": "MOV",
-	"skill1": "Skill 1",
-	"skill2": "Skill 2",
-	"skill3": "Skill 3",
-	"skill4": "Skill 4",
-	"skill5": "Skill 5",
-	"skill6": "Skill 6",
-	"skill7": "Skill 7",
-	"skill8": "Skill 8",
-	"gearandpossessions-u": "Gear and Possessions",
-	"cashandassets-u": "Cash and Assests",
-	"spendinglevel-u": "Spending Level ",
-	"cash-u": "Cash ",
-	"assets-u": "Assets ",
-	"backstory-u": "Backstory",
-	"Personal Description": "Personal Description",
-	"Ideology/Beliefs": "Ideology/Beliefs",
-	"Significant People": "Significant People",
-	"Meaningful Locations": "Meaningful Locations",
-	"Treasured Possessions": "Treasured Possessions",
-	"Traits": "Traits",
-	"Injuries & Scars": "Injuries &amp; Scars",
-	"Phobias/Manias": "Phobias/Manias",
-	"Tomes, Spells and Artifacts": "Tomes, Spells and Artifacts",
-	"Encounters with Strange Entities": "Encounters with Strange Entities",
-	"Encounters with Strange Entities-z": "Encounters with Strange Entities",
-	"majorwound-z": "Major Wound",
-	"dying-z": "Dying",
-	"pulphp-z": "Pulp HP",
-	"unarmed-z": "Unarmed",
-	"dodge-z": "Dodge",
-	"current-mental-condition": "Current Mental Condition",
-	"body-hit-location": "Body Hit Location",
-	"rolled": "Rolled:",
-	"right-leg": "Right Leg",
-	"left-leg": "Left Leg",
-	"abdomen": "Abdomen",
-	"chest": "Chest",
-	"right-arm": "Right Arm",
-	"left-arm": "Left Arm",
-	"head": "Head",
+	"damage&db-z": "Obr+MO",
+	"dam-z": "Obr",
+	"MOV-u": "Ruch",
+	"skill1": "Umiejętność 1",
+	"skill2": "Umiejętność 2",
+	"skill3": "Umiejętność 3",
+	"skill4": "Umiejętność 4",
+	"skill5": "Umiejętność 5",
+	"skill6": "Umiejętność 6",
+	"skill7": "Umiejętność 7",
+	"skill8": "Umiejętność 8",
+	"gearandpossessions-u": "Ekwipunek",
+	"cashandassets-u": "Gotówka i dobytek",
+	"spendinglevel-u": "Poziom wydatków ",
+	"cash-u": "Gotówka ",
+	"assets-u": "Dobytek ",
+	"backstory-u": "Historia badacza",
+	"Personal Description": "Opis postaci",
+	"Ideology/Beliefs": "Ideologia i przekonania",
+	"Significant People": "Ważne osoby",
+	"Meaningful Locations": "Znaczące miejsca",
+	"Treasured Possessions": "Rzeczy osobiste",
+	"Traits": "Przymioty",
+	"Injuries & Scars": "Urazy/blizny",
+	"Phobias/Manias": "Fobie/manie",
+	"Tomes, Spells and Artifacts": "Tajemne księgi, zaklęcia i artefakty",
+	"Encounters with Strange Entities": "Spotkania z dziwnymi istotami",
+	"Encounters with Strange Entities-z": "Spotkania z dziwnymi istotami",
+	"majorwound-z": "Ciężka rana",
+	"dying-z": "Umierający",
+	"pulphp-z": "PW miazgi",
+	"unarmed-z": "Nieuzbrojony",
+	"dodge-z": "Unik",
+	"current-mental-condition": "Obecna poczytalność",
+	"body-hit-location": "Miejsce trafienia",
+	"rolled": "Rzut:",
+	"right-leg": "Prawa noga",
+	"left-leg": "Lewa noga",
+	"abdomen": "Brzuch",
+	"chest": "Klatka piersiowa",
+	"right-arm": "Prawa ręka",
+	"left-arm": "Lewa ręka",
+	"head": "Głowa",
 	"downtime-u": "Downtime",
 	"scenarioname-u": "Scenario Name",
 	"scenarioinfo-u": "Conclusion & Info",
 	"scenariorewards-u": "Rewards",
-	"spellname-u": "Spell Name",
-	"cost-u": "Cost",
-	"castime-u": "Casting Time",
-	"description-u": "Description",
+	"spellname-u": "Nazwa zaklęcia",
+	"cost-u": "Koszt",
+	"castime-u": "Czas rzucania",
+	"description-u": "Opis",
 	"bout-of-madness-u-time": "Bout of Madness - Real Time",
 	"bout-of-madness-u-summary": "Bout of Madness - Summary",
-	"amnesia": "Amnesia:",
+	"amnesia": "Amnezja:",
 	"amnesia-dec": "The investigator has no memory of events that have taken place since they were last in a place of safety. This lasts for 1D10 rounds.",
 	"psychosomatic-disability": "Psychosomatic disability:",
 	"psychosomatic-disability-dec": "The investigator suffers psychosomatic blindness, deafness, or loss of the use of a limb or limbs for 1D10 rounds.",
@@ -346,16 +346,16 @@
 	"flee-in-panic-dec2": "When the investigator comes to their senses they are far away.",
 	"phobia-dec2": "The investigator gains a new phobia. Roll 1D100 on Phobias Table or choose one. The investigator comes to their senses 1D10 hours later, having taken every precaution to avoid their new phobia.",
 	"mania-dec2": "The investigator gains a new mania. Roll 1D100 on Manias Table or choose one. The investigator comes to their senses 1D10 hours later. During this bout of madness, the investigator will have been fully indulging in their new mania. Whether this is apparent to other people is up to the Keeper and player.",
-	"value": "Value:",
-	"critical": "Critical",
-	"success": "Success",
-	"hard": "Hard",
-	"extreme": "Extreme",
-	"fumble": "Fumble",
-	"fail": "Fail",
-	"malf": "Malf:",
-	"result": "Result:",
-	"dam": "Dam:",
+	"value": "Wartość:",
+	"critical": "Krytyczny sukces",
+	"success": "Sukces",
+	"hard": "Trudny sukces",
+	"extreme": "Ekstremalny sukces",
+	"fumble": "Krytyczna porażka",
+	"fail": "Porażka",
+	"malf": "Zaw:",
+	"result": "Rezultat:",
+	"dam": "Obr:",
 	"pulp-bout-of-madness-u-time": "Pulp Bout of Madness - Real-Time",
 	"crazy-pan": "Crazy Plan:",
 	"rage": "Rage:",
