--- a/Shadowrun5thEdition/translations/en.json
+++ b/Shadowrun5thEdition/translations/en.json
@@ -1,4 +1,4 @@
-{
+{ 
     "a": "A",
     "acc": "ACC",
     "accel": "Accel",
@@ -146,6 +146,7 @@
     "gear": "Gear",
     "gm": "To GM",
     "gm-whisper": "Whisper Roll to GM",
+    "/w GM": "/w GM",
     "grunt": "Grunt",
     "gunnery": "Gunnery",
     "gymnastics": "Gymnastics",
@@ -158,7 +159,7 @@
     "heavyweapons": "Heavy Weapons",
     "height-u": "Height",
     "host": "Host",
-    "hostrating": "Host Rating",
+    "host_rating": "Host Rating",
     "i": "I",
     "ic": "IC",
     "iclimit": "IC Limit",
@@ -189,7 +190,7 @@
     "levelresonance": "Level / Resonance",
     "licenses": "Licenses",
     "liftcarry": "Lift & Carry",
-    "limit": "Limit",
+    "limit":"Limit",
     "limits": "Limits",
     "locksmith": "Locksmith",
     "logic": "Logic",
@@ -259,7 +260,7 @@
     "physical_limit": "Physical Limit",
     "physicalbonus": "Physical Bonus",
     "physicaldamagetrack": "Physical Damage Track",
-    "physicallimit": "Physical Limit:",
+    "physicallimit":"Physical Limit:",
     "physicalskills": "Physical Skills",
     "pilot": "pilot",
     "pilotaerospace": "Pilot Aerospace",
@@ -274,7 +275,7 @@
     "power": "Power",
     "powers": "Powers",
     "pr": "Professional Rating",
-    "prep": "Prep...",
+    "prep":"Prep...",
     "primary": "Primary",
     "primaryarmor": "Primary Armor",
     "primarylifestyle": "Primary Lifestyle",
@@ -298,7 +299,7 @@
     "reaction": "Reaction",
     "recoil": "Recoil",
     "registering": "Registering",
-    "relatedlifestyle": "Related Lifestyles",
+    "relatedlifestyle": "Related Lifestyles", 
     "resonance": "Resonance",
     "resonanceskills": "Resonance Skills",
     "rituals": "Rituals",
@@ -384,4 +385,6 @@
     "importecharacter": "Import Character",
     "apply": "Apply",
     "importertext": "You can import a character with a JSON from Chummer. The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked."
+    ,"character name":"character name"
+    ,"player name":"player name"
 }
